[package]
name = "conectric-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Christian Louis Abrigo (YeXiuPH)"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
serialport = "4.2.2"