[package]
name = "conectric-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Christian Louis Abrigo (YeXiuPH)"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
serde = { version = "1.0.186", features = ["derive"] }
serde_json = "1.0.105"
serialport = "4.2.2"
tokio = { version = "*", features = ['full'] }
tokio-serial = "*"
